Complete the design according to figma

--- a/index.html
+++ b/index.html
@@ -15,20 +15,18 @@
     <header>
         <nav>
             <div class="logo">
-                <h3>Ma<span class="color-orange">r</span>y</h3>
+                <h3>Fer<span class="color-orange">d</span>ows</h3>
             </div>
-
             <ul>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Blog</a></li>
                 <li><button class="btn">Hire Me</button></li>
             </ul>
         </nav>
-
         <section id="banner">
             <div class="banner-content">
                 <h2>Hi, I  am</h2>
-                <h1>Mary Hardy</h1>
+                <h1>Md. Ferdows</h1>
                 <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <div class="btn-group">
                     <button class="btn"><i class="fa-solid fa-download"></i> Download CV</button>
@@ -36,7 +34,7 @@
                 </div>
             </div>
             <div class="banner-image">
-                <img src="images/hardy.png" alt="">
+                <img src="images/ferdows.png" alt="">
             </div>
         </section>
     </header>
@@ -50,19 +48,15 @@
             <div class="about-info">
                 <div class="about-info-card">
                     <p>Name:</p>
-                    <h4>Mary Hardy</h4>
-                </div>
-                <div class="about-info-card">
-                    <p>Email:</p>
-                    <h4>info@gmail.com</h4>
+                    <h4>Md. Ferdows Anwar</h4>
                 </div>
                 <div class="about-info-card">
                     <p>Date of birth:</p>
-                    <h4>11 November 1987</h4>
+                    <h4>15 March 1993</h4>
                 </div>
                 <div class="about-info-card">
                     <p>From:</p>
-                    <h4>Los Angeles, USA</h4>
+                    <h4>Savar, Dhaka, Bangladesh</h4>
                 </div>
             </div>
         </div>
@@ -104,7 +98,50 @@
             <h2>A summary of My Resume</h2>
         </div>
         <div class="resume-container">
+            <div class="education">
+                <h2 class="section-title">My Education</h2>
+                <div class="resume-card">
+                    <h3 class="card-title">Bsc in Computer Science</h3>
+                    <p class="card-info">City University / 2012 - 2015</p>
+                    <p class="card-text">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-card">
+                    <h3 class="card-title">Higher Secondary Certificate</h3>
+                    <p class="card-info">Savar Laboratory College / 2008 - 2010</p>
+                    <p class="card-text">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-card">
+                    <h3 class="card-title">Secondary School Certificate</h3>
+                    <p class="card-info">Baid Gaon High School / 2006 - 2008</p>
+                    <p class="card-text">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
 
+            <div class="experience">
+                <h2 class="section-title">My Experience</h2>
+                <div class="resume-card">
+                    <h3 class="card-title">Lecturer - ICT</h3>
+                    <p class="card-info">ARHMC / 2024 - Present</p>
+                    <p class="card-text">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-card">
+                    <h3 class="card-title">Executive - Compliance</h3>
+                    <p class="card-info">PFL / 2021 - 2024</p>
+                    <p class="card-text">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-card">
+                    <h3 class="card-title">Lecturer - ICT</h3>
+                    <p class="card-info">Savar City College / 2018 - 2021</p>
+                    <p class="card-text">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </div>
+        <div class="text-center">
+            <button class="btn"><i class="fa-solid fa-download"></i> Download CV</button>
         </div>
     </section>
 
